udemy-course/sec12-ingress/02-simple-ingress/01-simple-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy
spec:
  selector:
    matchLabels:
      app: my-app
  replicas: 3
  template:
    metadata:
      labels:
        app: my-app
    spec: 
      terminationGracePeriodSeconds: 1
      containers: 
      - name: nginx
        image: vinsdocker/nginx-gke
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
  - name: web-port
    port: 80
    targetPort: 80
